New Arquitecture APP,add logo, add name , add new function biseccition methot , add new function false rule , update interface results , and inputs methots simple and doble presiction

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#000000"
-backgroundColor="#bf6808"
+backgroundColor="#394c80"
 secondaryBackgroundColor = "#262730"
 textColor = "#FAFAFA"
 font = "sans serif"
