--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#000000"
-backgroundColor="#394c80"
-secondaryBackgroundColor = "#262730"
-textColor = "#FAFAFA"
+backgroundColor="#282729"
+secondaryBackgroundColor = "#000000"
+textColor = "#ffffff"
 font = "sans serif"
